--- a/packages/service/recovery-incident-orchestrator/package.json
+++ b/packages/service/recovery-incident-orchestrator/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@data/recovery-incident-store": "workspace:*",
     "@domain/recovery-incident-orchestration": "workspace:*",
-    "@shared/core": "workspace:*"
+    "@shared/core": "workspace:*",
+    "zod": "^3.24.0"
   }
 }
