feat(incident): expand tsz stress domains with orchestration, store, and UI adapters

--- a/packages/data/recovery-incident-store/package.json
+++ b/packages/data/recovery-incident-store/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@domain/recovery-incident-orchestration": "workspace:*",
+    "@data/repositories": "workspace:*",
     "@shared/core": "workspace:*"
   }
 }
