--- a/packages/data/recovery-incident-store/tsconfig.json
+++ b/packages/data/recovery-incident-store/tsconfig.json
@@ -13,6 +13,9 @@
       "path": "./../../domain/recovery-incident-orchestration/tsconfig.json"
     },
     {
+      "path": "./../../data/repositories/tsconfig.json"
+    },
+    {
       "path": "./../../shared/core/tsconfig.json"
     }
   ]
