--- a/packages/service/recovery-incident-orchestrator/package.json
+++ b/packages/service/recovery-incident-orchestrator/package.json
@@ -16,7 +16,10 @@
   "dependencies": {
     "@data/recovery-incident-store": "workspace:*",
     "@domain/recovery-incident-orchestration": "workspace:*",
+    "@infrastructure/incident-notifications": "workspace:*",
     "@shared/core": "workspace:*",
+    "@shared/protocol": "workspace:*",
+    "@data/repositories": "workspace:*",
     "zod": "^3.24.0"
   }
 }
