--- a/packages/service/recovery-incident-orchestrator/tsconfig.json
+++ b/packages/service/recovery-incident-orchestrator/tsconfig.json
@@ -17,6 +17,15 @@
     },
     {
       "path": "./../../shared/core/tsconfig.json"
+    },
+    {
+      "path": "./../../data/repositories/tsconfig.json"
+    },
+    {
+      "path": "./../../infrastructure/incident-notifications/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/protocol/tsconfig.json"
     }
   ]
 }
