feat: expand incident orchestration hierarchy with dashboard analytics

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,9 @@
       "path": "./packages/app/reporter"
     },
     {
+      "path": "./packages/app/recovery-incident-dashboard"
+    },
+    {
       "path": "./packages/app/incident-forecast-operator"
     },
     {
