feat: expand incident command orchestration with domain/service frontend workbench

--- a/packages/app/recovery-incident-dashboard/tsconfig.json
+++ b/packages/app/recovery-incident-dashboard/tsconfig.json
@@ -18,6 +18,9 @@
       "path": "./../../service/recovery-incident-orchestrator/tsconfig.json"
     },
     {
+      "path": "./../../service/recovery-command-orchestrator/tsconfig.json"
+    },
+    {
       "path": "./../../domain/recovery-incident-orchestration/tsconfig.json"
     },
     {
