--- a/packages/data/recovery-incident-store/tsconfig.json
+++ b/packages/data/recovery-incident-store/tsconfig.json
@@ -17,6 +17,9 @@
     },
     {
       "path": "./../../shared/core/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/recovery-operations-models/tsconfig.json"
     }
   ]
 }
