--- a/packages/service/recovery-incident-orchestrator/package.json
+++ b/packages/service/recovery-incident-orchestrator/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@data/recovery-incident-store": "workspace:*",
     "@domain/recovery-incident-orchestration": "workspace:*",
+    "@domain/recovery-operations-models": "workspace:*",
     "@infrastructure/incident-notifications": "workspace:*",
     "@shared/core": "workspace:*",
     "@shared/protocol": "workspace:*",
