feat: expand stability modeling and dashboard orchestration modules

--- a/packages/app/recovery-incident-dashboard/package.json
+++ b/packages/app/recovery-incident-dashboard/package.json
@@ -25,6 +25,9 @@
     "@shared/result": "workspace:*",
     "@data/incident-signal-store": "workspace:*",
     "@domain/incident-signal-intelligence": "workspace:*",
+    "@domain/recovery-stability-models": "workspace:*",
+    "@data/recovery-stability-store": "workspace:*",
+    "@service/recovery-stability-orchestrator": "workspace:*",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "@types/react": "^19.0.0",
