feat: expand recovery orchestration model and dashboard surface

--- a/packages/app/recovery-incident-dashboard/package.json
+++ b/packages/app/recovery-incident-dashboard/package.json
@@ -8,39 +8,40 @@
     ".": "./src/index.ts",
     "./src": "./src/index.ts",
     "./*": "./src/*.ts",
-    "./src/*": "./src/*.ts"
+    "./src/*": "./src/*.tsx"
   },
   "scripts": {
     "build": "tsc -b"
   },
   "dependencies": {
-    "@data/recovery-simulation-store": "workspace:*",
-    "@service/recovery-incident-orchestrator": "workspace:*",
-    "@service/recovery-command-orchestrator": "workspace:*",
-    "@service/recovery-simulation-orchestrator": "workspace:*",
-    "@service/recovery-workload-orchestrator": "workspace:*",
-    "@service/recovery-runner": "workspace:*",
-    "@domain/recovery-orchestration": "workspace:*",
-    "@domain/recovery-workload-intelligence": "workspace:*",
-    "@data/recovery-incident-store": "workspace:*",
-    "@data/recovery-workload-store": "workspace:*",
-    "@shared/result": "workspace:*",
+    "@aws-sdk/client-eventbridge": "^3.900.0",
     "@data/incident-signal-store": "workspace:*",
+    "@data/recovery-incident-store": "workspace:*",
+    "@data/recovery-operations-store": "workspace:*",
+    "@data/recovery-stability-store": "workspace:*",
+    "@data/recovery-workflow-store": "workspace:*",
+    "@data/recovery-workload-store": "workspace:*",
     "@domain/incident-signal-intelligence": "workspace:*",
     "@domain/recovery-incident-analytics": "workspace:*",
-    "@domain/recovery-stability-models": "workspace:*",
+    "@domain/recovery-incident-workflows": "workspace:*",
+    "@domain/recovery-orchestration": "workspace:*",
     "@domain/recovery-simulation-core": "workspace:*",
-    "@data/recovery-stability-store": "workspace:*",
+    "@domain/recovery-stability-models": "workspace:*",
+    "@domain/recovery-workload-intelligence": "workspace:*",
+    "@service/recovery-command-orchestrator": "workspace:*",
+    "@service/recovery-incident-analytics-orchestrator": "workspace:*",
+    "@service/recovery-incident-orchestrator": "workspace:*",
+    "@service/recovery-operations-engine": "workspace:*",
+    "@service/recovery-runner": "workspace:*",
+    "@service/recovery-simulation-orchestrator": "workspace:*",
     "@service/recovery-stability-orchestrator": "workspace:*",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "@service/recovery-workflow-orchestrator": "workspace:*",
+    "@service/recovery-workload-orchestrator": "workspace:*",
+    "@shared/result": "workspace:*",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "@aws-sdk/client-eventbridge": "^3.900.0",
-    "@service/recovery-workflow-orchestrator": "workspace:*",
-    "@data/recovery-workflow-store": "workspace:*",
-    "@domain/recovery-incident-workflows": "workspace:*",
-    "@service/recovery-incident-analytics-orchestrator": "workspace:*",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "zod": "^3.24.0"
   }
 }
