--- a/packages/service/recovery-runner/package.json
+++ b/packages/service/recovery-runner/package.json
@@ -24,7 +24,9 @@
     "@data/recovery-policy-store": "workspace:*",
     "@data/recovery-plan-store": "workspace:*",
     "@data/recovery-risk-store": "workspace:*",
+    "@data/recovery-simulation-metrics": "workspace:*",
     "@infrastructure/recovery-notifications": "workspace:*",
+    "@domain/recovery-simulation-planning": "workspace:*",
     "@service/recovery-policy-engine": "workspace:*",
     "@service/recovery-risk-engine": "workspace:*",
     "@service/recovery-plan-orchestrator": "workspace:*",
