--- a/packages/app/recovery-console/tsconfig.json
+++ b/packages/app/recovery-console/tsconfig.json
@@ -3,7 +3,12 @@
   "compilerOptions": {
     "outDir": "./dist",
     "composite": true,
-    "declaration": true
+    "declaration": true,
+    "jsx": "react-jsx",
+    "lib": [
+      "DOM",
+      "ES2023"
+    ]
   },
   "include": [
     "src/**/*"
@@ -17,6 +22,12 @@
     },
     {
       "path": "./../../shared/result/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/recovery-simulation-planning/tsconfig.json"
+    },
+    {
+      "path": "./../../data/recovery-simulation-metrics/tsconfig.json"
     }
   ]
 }
