--- a/packages/app/recovery-incident-dashboard/package.json
+++ b/packages/app/recovery-incident-dashboard/package.json
@@ -28,6 +28,9 @@
     "@domain/recovery-simulation-core": "workspace:*",
     "@domain/recovery-stability-models": "workspace:*",
     "@domain/recovery-workload-intelligence": "workspace:*",
+    "@data/recovery-situational-store": "workspace:*",
+    "@domain/recovery-situational-intelligence": "workspace:*",
+    "@service/recovery-situational-orchestrator": "workspace:*",
     "@service/recovery-command-orchestrator": "workspace:*",
     "@service/recovery-incident-analytics-orchestrator": "workspace:*",
     "@service/recovery-incident-orchestrator": "workspace:*",
