feat: expand TS domain/data/service/app recovery command orchestration graph

--- a/packages/app/adaptive-ops-console/package.json
+++ b/packages/app/adaptive-ops-console/package.json
@@ -18,6 +18,9 @@
     "@service/adaptive-ops-orchestrator": "workspace:*",
     "@domain/adaptive-ops": "workspace:*",
     "@domain/adaptive-ops-metrics": "workspace:*",
+    "@service/recovery-incident-command-orchestrator": "workspace:*",
+    "@domain/incident-command-models": "workspace:*",
+    "@data/incident-command-store": "workspace:*",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "@types/react": "^19.0.0",
