--- a/packages/app/adaptive-ops-console/tsconfig.json
+++ b/packages/app/adaptive-ops-console/tsconfig.json
@@ -25,6 +25,15 @@
     },
     {
       "path": "./../../domain/adaptive-ops-metrics/tsconfig.json"
+    },
+    {
+      "path": "./../../service/recovery-incident-command-orchestrator/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/incident-command-models/tsconfig.json"
+    },
+    {
+      "path": "./../../data/incident-command-store/tsconfig.json"
     }
   ]
 }
