--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -19,6 +19,7 @@
     "@domain/recovery-simulation-planning": "workspace:*",
     "@data/recovery-simulation-metrics": "workspace:*",
     "@shared/result": "workspace:*",
+    "@service/recovery-operations-policy-engine": "workspace:*",
     "@aws-sdk/client-eventbridge": "^3.900.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
