--- a/packages/app/recovery-console/tsconfig.json
+++ b/packages/app/recovery-console/tsconfig.json
@@ -36,6 +36,9 @@
       "path": "./../../service/recovery-runner/tsconfig.json"
     },
     {
+      "path": "./../../service/recovery-operations-policy-engine/tsconfig.json"
+    },
+    {
       "path": "./../../shared/result/tsconfig.json"
     }
   ]
