chore: stabilize recovery fusion types and orchestration pipeline

--- a/packages/app/recovery-incident-dashboard/tsconfig.json
+++ b/packages/app/recovery-incident-dashboard/tsconfig.json
@@ -93,6 +93,9 @@
     },
     {
       "path": "./../../data/recovery-situational-store/tsconfig.json"
+    },
+    {
+      "path": "./../../service/recovery-fusion-orchestrator/tsconfig.json"
     }
   ]
 }
