--- a/packages/app/recovery-incident-dashboard/package.json
+++ b/packages/app/recovery-incident-dashboard/package.json
@@ -45,6 +45,7 @@
     "@types/react-dom": "^19.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "zod": "^3.24.0"
+    "zod": "^3.24.0",
+    "@service/recovery-fusion-orchestrator": "workspace:*"
   }
 }
