feat(recovery-fabric): finish orchestration workspace and fix build errors

--- a/packages/app/recovery-incident-dashboard/package.json
+++ b/packages/app/recovery-incident-dashboard/package.json
@@ -46,6 +46,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "zod": "^3.24.0",
-    "@service/recovery-fusion-orchestrator": "workspace:*"
+    "@service/recovery-fusion-orchestrator": "workspace:*",
+    "@domain/recovery-fabric-orchestration": "workspace:*",
+    "@service/recovery-fabric-controller": "workspace:*"
   }
 }
