feat: expand recovery fusion domains and recovery-console orchestration UI

--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@service/recovery-runner": "workspace:*",
+    "@service/recovery-fusion-orchestrator": "workspace:*",
     "@domain/recovery-orchestration": "workspace:*",
     "@domain/recovery-simulation-planning": "workspace:*",
     "@data/recovery-simulation-metrics": "workspace:*",
